<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/lblSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/subject"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/grade"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTutionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/grade"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/layoutTutionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/pureWhite"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTutionType">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleTutionType"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/individual"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_individual"
                android:text="@string/individual"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/group"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_group"
                android:text="@string/group"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/mass"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_mass"
                android:text="@string/mass"
                android:textAllCaps="false" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </RelativeLayout>

    <TextView
        android:id="@+id/lblDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/day"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTutionType" />

    <RelativeLayout
        android:id="@+id/layoutDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/pureWhite"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/lblDay">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_button_day_1">

            <RadioButton
                android:id="@+id/radio_button_day_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:layoutDirection="rtl"
                android:text="@string/monday"
                android:textColor="@color/textDarkGray"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button_day_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:layoutDirection="rtl"
                android:text="@string/tuesday"
                android:textColor="@color/textDarkGray"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button_day_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:layoutDirection="rtl"
                android:text="@string/wednesday"
                android:textColor="@color/textDarkGray"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button_day_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:layoutDirection="rtl"
                android:text="@string/thursday"
                android:textColor="@color/textDarkGray"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button_day_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:layoutDirection="rtl"
                android:text="@string/friday"
                android:textColor="@color/textDarkGray"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button_day_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:layoutDirection="rtl"
                android:text="@string/saturday"
                android:textColor="@color/textDarkGray"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button_day_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:layoutDirection="rtl"
                android:text="@string/sunday"
                android:textColor="@color/textDarkGray"
                android:textSize="16dp" />
        </RadioGroup>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:background="@color/pink"
        android:fontFamily="@font/lato_bold"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>