<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/logo_without_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/layoutMemberType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:foregroundTint="@color/pureWhite"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/layoutUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/tutor"
            android:textAllCaps="false"
            android:textColor="@color/pureWhite"
            app:icon="@drawable/ic_tutor"
            app:iconPadding="10dp"
            app:iconTint="@color/pureWhite" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/student"
            android:textAllCaps="false"
            android:textColor="@color/pureWhite"
            app:icon="@drawable/ic_student"
            app:iconPadding="10dp"
            app:iconTint="@color/pureWhite" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/email"
        android:textColorHint="@color/pureWhite"
        app:boxStrokeColor="@color/pureWhite"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/pureWhite"
        app:layout_constraintBottom_toTopOf="@id/layoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:focusedByDefault="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/pureWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/pureWhite"
        app:boxStrokeColor="@color/pureWhite"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/pureWhite"
        app:hintTextColor="@color/pureWhite"
        app:layout_constraintBottom_toTopOf="@id/btnForgotPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:focusedByDefault="false"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/pureWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnForgotPassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/pureWhite"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent" />

    <lk.fmt.findmytutor.helpers.ui.FMTButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="@dimen/buttonHeight"
        android:background="@drawable/button_primary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/pureWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/txtOr" />

    <lk.fmt.findmytutor.helpers.ui.FMTRotatingImageView
        android:id="@+id/spinner"
        android:scaleType="centerInside"
        android:src="@drawable/drawable_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="@id/btnSignIn"
        app:layout_constraintBottom_toBottomOf="@id/btnSignIn"/>

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/or"
        android:textColor="@color/pureWhite"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/pureWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>