<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lk.fmt.findmytutor.activities.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_blue"
        android:scaleType="fitXY"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_bold"
        android:lineSpacingExtra="5dp"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieBooks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/layoutSubject"
        app:layout_constraintTop_toBottomOf="@id/slogan"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/lottie_books" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutSubject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        app:boxStrokeColor="@color/grayBorder"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/layoutGrade">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSubject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputFieldHeight"
            android:hint="@string/subject"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutGrade"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        app:boxStrokeColor="@color/grayBorder"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btnGo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputGrade"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputFieldHeight"
            android:hint="@string/grade"
            android:imeOptions="actionGo"
            app:layout_constraintTop_toBottomOf="@id/inputSubject" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGo"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/go"
        android:textColor="@color/background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="@color/background" />


</androidx.constraintlayout.widget.ConstraintLayout>